[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/bolt/Bolt.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/bolt/EnemyRacing.gd" type="Script" id=2]
[ext_resource path="res://assets/shaders/bolt_shield_texture.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/noise_intensity = 1.0
shader_param/noise_layers = 5
shader_param/noise_speed = 2.0
shader_param/inverse_output = false
shader_param/colorize = Color( 1, 1, 1, 1 )
shader_param/color_to_cut = Color( 1, 1, 1, 1 )
shader_param/color_intensity = 1.0
shader_param/texture_size = Vector2( 32, 32 )

[node name="EnemyRacing" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Shield" parent="." index="3"]
material = SubResource( 1 )

[node name="EnergyBar" parent="BoltHud/VBoxContainer" index="0"]
margin_top = 0.0
margin_bottom = 1.0

[node name="FeatSelector" parent="BoltHud/VBoxContainer" index="1"]
margin_top = 5.0
margin_bottom = 13.0

[node name="DetectArea" type="Node2D" parent="." index="7"]
scale = Vector2( 3, 3 )

[node name="DetectFront" type="Area2D" parent="DetectArea" index="0"]
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectArea/DetectFront" index="0"]
polygon = PoolVector2Array( 0, 0, 39.6667, -39.6667, 56, 0, 39.6667, 39.6667 )

[node name="DetectBack" type="Area2D" parent="DetectArea" index="1"]
visible = false
rotation = 3.14159
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectArea/DetectBack" index="0"]
polygon = PoolVector2Array( 0, 0, 39.6667, -39.6667, 56, 0, 39.3332, 39.6668 )

[node name="DetectLeft" type="Area2D" parent="DetectArea" index="2"]
visible = false
rotation = -1.57079
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectArea/DetectLeft" index="0"]
polygon = PoolVector2Array( 0, 0, 39.6666, -39.3334, 56, 0, 39.6668, 39.6666 )

[node name="DetectRight" type="Area2D" parent="DetectArea" index="3"]
visible = false
rotation = 1.57079
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectArea/DetectRight" index="0"]
polygon = PoolVector2Array( 0, 0, 39.6668, -39.6666, 56, 0, 39.6667, 39.6667 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="8"]
target_desired_distance = 20.0

[node name="SeekRay" type="RayCast2D" parent="." index="9"]
enabled = true
cast_to = Vector2( 18, 0 )

[node name="VisionFront" type="RayCast2D" parent="." index="10"]
enabled = true
cast_to = Vector2( 100, 0 )
collide_with_areas = true

[node name="VisionRear" type="RayCast2D" parent="." index="11"]
visible = false
cast_to = Vector2( -50, 0 )
collide_with_areas = true

[node name="VisionLeft" type="RayCast2D" parent="." index="12"]
visible = false
cast_to = Vector2( 10, -40 )
collide_with_areas = true

[node name="VisionRight" type="RayCast2D" parent="." index="13"]
visible = false
cast_to = Vector2( 10, 40 )
collide_with_areas = true

[connection signal="body_entered" from="DetectArea/DetectFront" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea/DetectFront" to="." method="_on_DetectArea_body_exited"]
[connection signal="body_entered" from="DetectArea/DetectBack" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea/DetectBack" to="." method="_on_DetectArea_body_exited"]
[connection signal="body_entered" from="DetectArea/DetectLeft" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea/DetectLeft" to="." method="_on_DetectArea_body_exited"]
[connection signal="body_entered" from="DetectArea/DetectRight" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea/DetectRight" to="." method="_on_DetectArea_body_exited"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_navigation_finished"]
[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_target_reached"]
